@@ -1142,8 +1142,10 @@ public class TestProportionalCapacityPreemptionPolicy {
     ResourceCalculator rc = mCS.getResourceCalculator();
     List<ApplicationAttemptId> appAttemptIdList = 
         new ArrayList<ApplicationAttemptId>();
-    when(lq.getTotalResourcePending()).thenReturn(pending[i]);
-    // need to set pending resource in resource usage as well
+
+    when(lq.getTotalPendingResourcesConsideringUserLimit(isA(Resource.class)))
+        .thenReturn(pending[i]); // need to set pending resource in resource
+                                 // usage as well
     ResourceUsage ru = new ResourceUsage();
     ru.setPending(pending[i]);
     ru.setUsed(used[i]);
@@ -1274,7 +1276,8 @@ public class TestProportionalCapacityPreemptionPolicy {
       }
     } else {
       System.out.println(indent + nq.getQueueName()
-          + " pen:" + ((LeafQueue) nq).getTotalResourcePending()
+          + " pen:" + ((LeafQueue) nq)
+              .getTotalPendingResourcesConsideringUserLimit(isA(Resource.class))
           + " cur:" + nq.getAbsoluteUsedCapacity()
           + " guar:" + nq.getAbsoluteCapacity()
           );
